# secretsharing-testbed

./: .gitignore  Cargo.toml  README.md  run_experiment.py
configs/: README.md  (+14 more)
global_lib/: Cargo.toml
global_lib/src/: ip_addr.rs  lib.rs  macros.rs  messages.rs  network.rs  process.rs  process_pool.rs  settings.rs
global_lib/src/config_treatment/: args.rs  data_type.rs  fields.rs  mod.rs  plot.rs  result_fields.rs  subargs.rs  utils.rs  variations.rs
global_lib/src/task_pool/: errors.rs  mod.rs  task.rs  task_pool.rs
interface/: Cargo.toml  README.md  interface
interface/src/: base_generator.rs  configuration.rs  main.rs  network.rs  process.rs
nodes/: Cargo.toml  README.md
nodes/src/: lib.rs  macros.rs  main.rs
nodes/src/avss_simpl/: crypto_messages.rs  dealer.rs  messages_receiver.rs  mod.rs  receiver.rs  reconstruct.rs
nodes/src/badger/: broadcast_recv.rs  dealer.rs  messages_receiver.rs  mod.rs  receivers.rs  reconstruct.rs
nodes/src/bingo/: dealer.rs  messages_receiver.rs  mod.rs  receivers.rs  reconstruct.rs
nodes/src/broadcast/: broadcast_memory.rs  broadcast_message_types.rs  listener.rs  mod.rs
nodes/src/crypto/: crypto_set.rs  mod.rs  scheme.rs
nodes/src/crypto/crypto_lib/: evaluation_domain.rs  fft.rs  lagrange.rs  mod.rs  polynomials.rs  util.rs
nodes/src/crypto/data_structures/: *Buffer List*  bivariate_polynomial.rs  commitment.rs  encryption.rs  keypair.rs  merkle_tree.rs  mod.rs  reed_solomon_code.rs  scalars.rs  share.rs
nodes/src/disperse_retrieve/: init.rs  listener.rs  memory.rs  messages.rs  mod.rs
nodes/src/haven/: crypto.rs  dealer.rs  messages_receiver.rs  mod.rs  receiver.rs
nodes/src/hbavss/: dealer.rs  messages.rs  messages_receiver.rs  mod.rs  receivers.rs
nodes/src/lightweight/: dealer.rs  messages_receiver.rs  mod.rs  receivers.rs
nodes/src/node/: configuration.rs  mod.rs  node.rs  node_message.rs  node_process_input.rs  node_process_output.rs
nodes/src/one_sided_vote/: mod.rs
nodes/src/secure_message_dist/: enc_dec.rs  init.rs  listener.rs  messages.rs  mod.rs  smd_memory.rs
nodes/src/system/: heart_message.rs  message_interface.rs  mod.rs  node_sender.rs  nodes_heart.rs  summaries.rs
(+27 files in other folders)
