[package]
name = "global_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.139", features = ["derive"] }
bincode = "1.3.3"
paste = "1.0.15"
tokio = { version = "1.37.0", features = ["full"] }    
thiserror = "2.0.2"
rand = "0.8"    
anyhow = "1.0.95"
tracing = "0.1.41"
futures = "0.3.31"