[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
global_lib = { path = "../global_lib/" }
bincode = "1.3.3" 
paste = "1.0.15"    
tokio = { version = "1.37.0", features = ["full"] }    
blstrs = { version = "0.6.1", features = ["serde"] }
group = "0.12.1"    
local-ip-address = "0.6.5"
