[package]
name = "nodes"
version = "0.1.0"
edition = "2021"
    
            
[dependencies]
tokio = { version = "1.37.0", features = ["full"] }    
bincode = "1.3.3"

anyhow = "1.0.58"        
aptos-crypto = { git ="https://github.com/sourav1547/aptos-core.git",  package ="aptos-crypto", features=["cloneable-private-keys", "fuzzing"]}
aptos-crypto-derive = { git = "https://github.com/sourav1547/aptos-core.git", package="aptos-crypto-derive"}
num-bigint = { version = "0.3.2", features = ["rand"] } 
num-integer = "0.1.42"
num-traits = "0.2.11"
blstrs = { version = "0.6.1", features = ["serde"] }
hex = "0.4.3"
ff = "0.12.0"
group = "0.12.1"
merlin = "1.3.0"
more-asserts = "0.3.1"
once_cell = "1.17.0"
rand = "0.7.3"
rand_core = "0.5.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_bytes = "0.11.6"
serde_with = "2.2.0"
sha3 = "0.10.6"
sha2 = "0.10.2"    
zeroize = { version = "1.3.0", features = ["zeroize_derive"] }
lazy_static = "1.4.0"
subtle = "2.4"
rand_chacha = "0.3"
paste = "1.0.15"
reed-solomon-16 =  "0.1.0"
pairing = "0.22.0"
merkletree = "0.23.0"
blsttc = "*"    
notifier_hub = "0.1.2"
futures = "0.3.31"
num_cpus = "1.16.0"

sendable_proc_macros = { path = "src/system/sendable_proc_macros"}
global_lib = { path = "../global_lib/" }
    